aws/projects/Project-001-Roman-Numerals-Converter/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on Amazon Linux 2 ami-0742b4e673072066f EC2 Instance with custom security group allowing http connections on port 80 and SSH connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.
Parameters: 
  Keyname:
    Description: Enter the name of your Key pair for EC2 lol
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair
  InstanceType:
      Description: WebServer EC2 instance type
      Type: String
      Default: m1.small
      AllowedValues:
        - t2.micro
        - m1.small
        - m1.medium
        - m1.large
        - m1.xlarge
        - m3.xlarge
        - m3.2xlarge
        - m2.xlarge
        - m2.2xlarge
        - m2.4xlarge
        - c1.medium
        - c1.xlarge
        - cc1.4xlarge
        - cc2.8xlarge
        - cg1.4xlarge
        - hi1.4xlarge
        - hs1.8xlarge

Resources:
  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure connection to my EC2 #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 

WebServerHost:
  Type: AWS::EC2::Instance
  Properties:
    ImageId: ami-0742b4e673072066f
    InstanceType: !Ref InstanceType
    KeyName: !Ref Keyname 
    SecurityGroupIds:
      - !Ref WebServerSecGroup
    Tags:
      - Key: Name
        Value: !Sub Web Server of ${AWS::StackName}
    UserData: !Base64 |
      #! /bin/bash
      yum update -y
      yum install python3 -y
      pip3 install flask
      cd /home/ec2-user
      FOLDER="https://raw.githubusercontent.com/YunusStar/aws-devops/main/aws/projects/Project-001-Roman-Numerals-Converter"
      wget $FOLDER/app.py
      wget -P templates $FOLDER/templates/index.html
      wget -P templates $FOLDER/templates/result.html
      python3 app.py
      
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
